--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,16 @@ header {
     font-family: 'Oxanium', sans-serif;
     letter-spacing: 0.5em;
     font-weight: 200;
-    height: 60px; /* Explicitly set the height */
-    line-height: 60px; /* Center the text vertically */
-    font-size: 14px;
+    height: 3rem; /* Explicitly set the height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+}
+
+h1 {
+    font-size: 2rem;
+    margin: 0;
 }
 
 #welcome-section {
@@ -93,7 +100,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-top: 30px;
+    padding-top: 1rem;
     position: relative;
     width: 100%;
     height: calc(100vh - 60px);
@@ -107,7 +114,7 @@ header {
 
 .app-card {
     background-color: #141414;
-    border: 1px solid #222;
+    /* border: 1px solid #222; */
     border-radius: 2px;
     margin: 1rem;
     padding: 1rem;
@@ -115,12 +122,12 @@ header {
     text-align: left;
     display: grid;
     grid-template-areas:
-        "title image"
-        "category image"
-        "subtitle subtitle"
-        "price rating";
-    grid-template-columns: auto 1fr;
-    grid-template-rows: auto auto 1fr auto;
+        "title title image image"
+        "category neuralinkIcon image image"
+        "subtitle subtitle subtitle subtitle"
+        "price price rating rating";
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto auto;
     gap: 0.5rem;
     cursor: pointer;
 }
@@ -140,7 +147,6 @@ header {
 
 .subtitle {
     grid-area: subtitle;
-    margin: 0 0 3 0;
     font-weight: 400;
 }
 
@@ -160,6 +166,13 @@ header {
     justify-self: start;
     align-self: start; /* Align to the top */
     width: auto;
+}
+
+.neuralinkIcon {
+    grid-area: neuralinkIcon;
+    width: 28px;
+    height: 17.5px;
+    justify-self: start;
 }
 
 .rating {
@@ -240,7 +253,7 @@ header {
 #modal-image {
     grid-area: modal-image;
     max-width: 100%;
-    margin: -2rem -2rem -2rem 0;
+    margin: -2rem -2rem -1.5rem 0;
     border-radius: 0 10px 10px 0;
 }
 
@@ -334,29 +347,52 @@ header {
 
 @media (max-width: 768px) {
 
+    header {
+        height: 2rem; 
+    }
+
     h1 {
         font-size: 1.5rem;
-        margin-left: 1rem;
-        margin-right: 1rem;
         letter-spacing: 0em;
+        margin: 0;
     }
-    /* Adjust app card margins for mobile */
+
+    #app-list {
+        padding-top: 0.5rem;
+    }
+    
     .app-card {
         margin: 0.5rem;
         padding: 0.5rem;
-        width: calc(100% - 1rem); /* Adjust width to fit within the container */
+        width: calc(100% - 1rem); 
         grid-template-areas:
         "title title image"
-        "category category image"
+        "category neuralinkIcon image"
         "subtitle subtitle image"
         "price rating image";
         grid-template-columns: auto auto 40%;
-        grid-template-rows: auto auto auto auto;
+        grid-template-rows: auto auto auto;
         gap: 0.1rem;
+    }
+
+    /* 
+    top margin of mobile list
+    push price and rating to bottom */
+
+    .subtitle {
+        overflow: hidden; /* Hide the overflow text */
+        white-space: nowrap; /* Prevent text from wrapping to the next line */
+        text-overflow: ellipsis; /* Add ellipsis (...) for overflow text */
+    }
+    
+
+    .neuralinkIcon {
+        justify-self: end;
     }
 
     .app-card img {
         max-width: 100%;
+        height: auto;
         margin: -0.5rem -0.5rem -0.5rem 1rem;
         border-radius: 0 2px 2px 0;
     }
@@ -375,7 +411,8 @@ header {
             "modal-accessories modal-category"
             "modal-price modal-rating"
             "optimus-button optimus-button"
-            "neuralink-button neuralink-button";
+            "neuralink-button neuralink-button"
+            "close-modal-mobile close-modal-mobile";
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         overflow-y: auto; /* Enable vertical scrolling */
@@ -432,5 +469,21 @@ header {
     
     #neuralink-button{
         margin: 0 1rem 1rem 1rem;
+    }
+
+    #close-modal-mobile {
+        grid-area: close-modal-mobile;
+        display: block !important; /* Show the Close button on mobile */
+        background-color: #444;
+        border: none;
+        cursor: pointer;
+        margin: 0 1rem 1rem 1rem;
+        padding: 10px 20px;
+        text-align: center;
+        color: #e6e5e5;
+        font-family: 'Gabarito', sans-serif;
+        font-size: 1rem;
+        border-radius: 6px;
+        align-self: center;
     }
 }
