--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,7 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
-    z-index: 10000;
+    z-index: 5000;
 }
 
 #modal-content {
@@ -484,4 +484,65 @@ h1 {
         border-radius: 6px;
         align-self: center;
     }
+}
+
+#neuralink-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 1);
+    z-index: 10000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+#neuralink-overlay.show {
+    opacity: 1;
+}
+
+#neuralink-animation {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.glowing-circle {
+    position: absolute;
+    border-radius: 50%;
+    background-color: none;
+    box-shadow: inset 0 0 10px #DA22FF;
+    animation: grow 5s infinite;
+}
+
+@keyframes grow {
+    0% {
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+    100% {
+        width: 200%;
+        height: 200%;
+        opacity: 0;
+    }
+}
+
+#neuralink-install-message {
+    font-family: 'Oxanium', sans-serif;
+    color: #e6e5e5;
+    font-size: 4rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background-color: none;
 }
