--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,23 @@ header {
     font-size: 2rem;
 }
 
+#footer {
+    font-size: 0.75rem;
+    color:#888;
+    text-align: right;
+    width: 100%;
+    height: 1rem;
+}
+
+#footer span {
+    margin-right: 15px;
+}
+
+a {
+    color: #888;
+    text-decoration: underline;
+}
+
 h1 {
     font-size: 2rem;
     margin: 0;
@@ -85,6 +102,8 @@ h1 {
 #scroll-container {
     height: 200vh; /* Artificial height to enable scrolling */
     overscroll-behavior: none; /* Prevent bounce effect */
+    display: flex;
+    flex-direction: column;
 }
 
 .glowing-animation {
@@ -98,8 +117,10 @@ h1 {
 
 #app-list {
     display: flex;
+    flex: 1;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: flex-start;
     padding-top: 1rem;
     position: relative;
     width: 100%;
@@ -119,6 +140,7 @@ h1 {
     margin: 1rem;
     padding: 1rem;
     width: 250px;
+    max-height: 350px;
     text-align: left;
     display: grid;
     grid-template-areas:
